examples/test/testpolicy2843.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2843
  namespace: namespace108
spec:
  podSelector:
    matchLabels:
      key45: value17
      key1: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value25
      podSelector:
        matchLabels:
          key49: value37
          key43: value30
          key26: value31
